Fix radio selector & update label spacing.
- Fixed incorrect radio selector following usa-legend
- Reduce label spacing from `units(3)` → `units(2)`

--- a/src/stylesheets/elements/form-controls/_checkbox-and-radio.scss
+++ b/src/stylesheets/elements/form-controls/_checkbox-and-radio.scss
@@ -12,8 +12,8 @@
 }
 
 .usa-legend + .usa-checkbox,
-.usa-legend + .usa-radio__input {
-  margin-top: units(3);
+.usa-legend + .usa-radio {
+  margin-top: units(2);
 }
 
 .usa-checkbox__input,
