--- a/src/stylesheets/elements/form-controls/_global.scss
+++ b/src/stylesheets/elements/form-controls/_global.scss
@@ -65,7 +65,7 @@ $input-select-margin-right: 1.5;
 .usa-label {
   display: block;
   line-height: line-height($theme-form-font-family, 2);
-  margin-top: units(3);
+  margin-top: units(2);
   max-width: units($theme-input-max-width);
 }
 
